{
    "name": "InputMap",
    "maps": [
        {
            "name": "GameplayInput",
            "id": "21b72a09-2620-4545-9116-dbb5dfc504b6",
            "actions": [
                {
                    "name": "FirstTouchContact",
                    "type": "Button",
                    "id": "1416dce7-cff0-4f25-a538-b1da1a6a8f91",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SingleSwipeOnScreen",
                    "type": "PassThrough",
                    "id": "fff6f07e-7de6-4646-acef-46ac07995e62",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstTouchPosition",
                    "type": "PassThrough",
                    "id": "8f2c62e9-72ab-4683-b49a-111d25803af7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3f10dff-af87-4821-ab17-c99045fb2128",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SingleSwipeOnScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9aab9d71-280a-49eb-913f-947a87d64de4",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62d6f43d-8eb4-48ac-9241-0ce35523c178",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}